# 2020-ICFP-contest

./: Cargo.toml  README.md  testing web hooks
app/: main.rs  modulate.rs
galaxy_parse/: Cargo.toml
galaxy_parse/src/: galaxy_eval.rs  galaxy_parse.rs  main.rs
process/: Cargo.toml
process/src/: main.rs
src/: basic.rs  main.rs  problems.rs
src/grapher/: main.rs
src/runner/: main.rs
