[package]
name = "app"
version = "0.1.0"
authors = []
edition = "2018"

[[bin]]
name = "app"
path = "app/main.rs"

[[bin]]
name = "runner"
path = "src/runner/main.rs"

[[bin]]
name = "grapher"
path = "src/grapher/main.rs"

[dependencies]
rand = "0.7.3"
tokio = { version = "0.2.21", features = ["macros"] }
hyper = "0.13.5"
http-body = "0.3.1"
bitvec = "0.17.4"
